# AutoSchemaKGDEV

./: .gitignore  README.md  TODO.md  atlas_api_demo.py  atlas_billion_kg_usage.ipynb  atlas_billion_knowledge_graph_usage.ipynb  atlas_full_pipeline.ipynb  atlas_large_knowledge_graph_usage.ipynb  atlas_multihopqa.ipynb  atlas_mutihopqa.py  atlas_usage.ipynb  check_toml.py  dev_requirement.txt  environment-cpu.yml  environment.yml  networkx_rag.ipynb  pyproject.toml
EvaluateFactuality/: README.md  eval.py
EvaluateGeneralTask/: README.md
EvaluateGeneralTask/lm-evaluation-harness/results/: score.py  subject_score.py
EvaluateKGC/: README.md
EvaluateKGC/InfoPreservation/: answer_generation.py  question_generation.py
EvaluateKGC/SchemaQuality/: conceptualization_contextulized_api.py  eval.py  utils.py
EvaluateKGC/TripleAccuracy/: triple_acc.py
NewWork/: README.md  STANDARD_BENCHMARK_GUIDE.md  __init__.py  advanced_rag_benchmark.py  concept_to_graph.py  config.json  config_loader.py  direct_concept_config.py  direct_concept_extractor.py  direct_concept_pipeline.py  direct_concept_prompt.py  example_usage.py  hotpot_contexts_for_kg.json  hotpot_kg_pipeline.py  hotpot_test_questions.json  hotpotlocation.txt  neo4j_rag_benchmark.py  official_benchmark.py  rag_benchmark.py  run_pipeline.py  run_with_config.py  standard_benchmark_integration.py
NewWork/output/: execution_log.json  statistics.json
NewWork/output/concept_csv/: concepts_hotpot_contexts_for_kg.csv  relationships_hotpot_contexts_for_kg.csv
NewWork/output/concepts/: direct_concepts_20250803100154.json  direct_concepts_20250803102405.json
NewWork/output/hotpot_kg/: statistics.json
NewWork/output/simple_test/: advanced_rag_benchmark_results.json  execution_log.json  statistics.json
atlas_rag/: __init__.py  logging.py
atlas_rag/billion/: neo4j_api.py  prompt_template.py  retreiver.py  utils.py
atlas_rag/billion/retriever/: __init__.py  base.py  lkgr.py  retreiver.py  tog.py
atlas_rag/evaluation/: __init__.py  benchmark.py  evaluation.py  util.py
atlas_rag/kg_construction/: __init__.py  concept_generation.py  concept_to_csv.py  prompt.py  triple_config.py  triple_extraction.py  triple_generator.py
atlas_rag/kg_construction/neo4j/: neo4j_api.py  utils.py
atlas_rag/llm_generator/: llm_generator.py  llm_generator_legacy.py
atlas_rag/llm_generator/format/: validate_json_output.py  validate_json_schema.py
atlas_rag/llm_generator/prompt/: lkg_prompt.py  rag_prompt.py  react.py  triple_extraction_prompt.py
atlas_rag/reader/: __init__.py  llm_generator.py
atlas_rag/retrieval/: __init__.py  embedding_model.py  indexer.py  rag_model.py
atlas_rag/retrieval/retriever/: __init__.py  base.py  hipporag.py  hipporag2.py  tog.py  (+1 more)
atlas_rag/retriever/: __init__.py  base.py  embedding_model.py  filter_template.py  hipporag.py  hipporag2.py  indexer.py  inference_config.py  rag_model.py  rag_qa_prompt.py  simple_retriever.py  tog.py
atlas_rag/util/: csv_to_graphml.py
atlas_rag/utils/: __init__.py  compute_embedding.py  convert_csv2npy.py  create_index.py  csv_add_column.py  csv_to_graphml.py  json_2_csv.py  json_repair.py  triple_generator.py  utils.py
atlas_rag/vectorstore/: __init__.py  create_graph_index.py  create_neo4j_index.py  embedding_model.py
example_data/: Apple_Environmental_Progress_Report_2024.json  CICGPC_Glazing_ver1.0a.json  Dulce.json  Dulce_test.json  RomanceOfTheThreeKingdom-zh-CN.json  RomanceOfTheThreeKingdom-zh-HK.json
example_data/md_data/: Apple_Environmental_Progress_Report_2024.md  CICGPC_Glazing_ver1.0a.md
example_scripts/: 1_slice_kg_extraction.py  2_concept_generation.py  slice_kg_extraction.sh
neo4j_api_host/: atlas_api.py  atlas_api_client_demo.py  atlas_api_demo.py  atlas_api_server_demo.py  atlas_api_server_demo_cc.py  atlas_api_server_demo_pes2o.py  atlas_api_server_demo_wiki.py
neo4j_scripts/: get_neo4j_cc.sh  get_neo4j_demo.sh  get_neo4j_pes2o.sh  get_neo4j_wiki.sh  neo4j.conf  start_neo4j_cc.sh  start_neo4j_demo.sh  start_neo4j_pes2o.sh  start_neo4j_wiki.sh  stop_all_neo4j.sh  stop_neo4j_cc.sh  stop_neo4j_demo.sh  stop_neo4j_pes2o.sh  stop_neo4j_wiki.sh
src/ATLASRetriever/: README.md  api_neo4j_retriever_model.py  app_neo4j_retriever_cc.py  app_neo4j_retriever_demo.py  app_neo4j_retriever_pes2o.py  app_neo4j_retriever_wiki.py  create_faiss_index.py
src/LKGConstruction/: README.md
tests/: test_base_retriever.py  test_embedding_model.py  test_filter_template.py  test_hipporag.py  test_hipporag2.py  test_indexer.py  test_prompt_template.py  test_simple_retriever.py  test_tog.py  unit_test.py
(+72 files in other folders)
